--- a/camvolution.ucf
+++ b/camvolution.ucf
@@ -1,21 +1,41 @@
 ###########################################
 # Setting VCCAUX for different SP601 board
 ###########################################
-VCCAUX = 3.3;
+CONFIG VCCAUX = 3.3;
 
 ########################################
 # Reset button and LEDs
 ########################################
 NET SW6     LOC = P15 | IOSTANDARD = LVCMOS33;
 NET SW7     LOC = P16 | IOSTANDARD = LVCMOS33;
-#NET LED     LOC = N11 | IOSTANDARD = LVCMOS33;
+NET LED     LOC = N11 | IOSTANDARD = LVCMOS33;
 
 ##############################################################################
 # SYSCLK Input
 ##############################################################################
-Net SYS_CLK TNM_NET = SYS_CLK;
-TIMESPEC TS_SYS_CLK = PERIOD SYS_CLK 120000.0 kHz;
-NET "SYS_CLK"       LOC = "C9" | IOSTANDARD = LVCMOS33;
+Net clk120 TNM_NET = clk120;
+TIMESPEC TS_clk120 = PERIOD clk120 120000.0 kHz;
+NET "clk120"       LOC = "C9" | IOSTANDARD = LVCMOS33 | PERIOD = 120 MHz;
+
+# Constraint for RX0
+#
+NET "hdmi/dvi_rx0/rxclk" TNM_NET = DVI_CLOCK0;
+TIMESPEC TS_DVI_CLOCK0 = PERIOD "DVI_CLOCK0" 120 MHz HIGH 50%;
+
+#INST "dvi_rx0/ibuf_rxclk" LOC = 
+#INST "dvi_rx0/ioclk_buf" LOC = BUFPLL_X1Y5;
+#INST "dvi_rx0/bufio_tmdsclk" LOC = BUFIO2_X2Y29;
+#
+#INST "dvi_rx0/tmdsclk_bufg" LOC = PAD9;
+#
+# Multi-cycle paths for TX0
+#
+TIMEGRP "bramgrp_0" = RAMS(hdmi/dvi_tx0/pixel2x/dataint<*>);
+TIMEGRP "fddbgrp_0" = FFS(hdmi/dvi_tx0/pixel2x/db<*>);
+TIMEGRP "bramra_0"  = FFS(hdmi/dvi_tx0/pixel2x/ra<*>);
+#
+TIMESPEC "TS_ramdo_0" = FROM "bramgrp_0" TO "fddbgrp_0" TS_DVI_CLOCK0;
+TIMESPEC "TS_ramra_0" = FROM "bramra_0"  TO "fddbgrp_0" TS_DVI_CLOCK0;
 
 ##############################################################################
 # DCM/PLL/BUFPLL positions // probably not to be uncommented
@@ -23,11 +43,6 @@ NET "SYS_CLK"       LOC = "C9" | IOSTANDARD = LVCMOS33;
 #INST "PCLK_GEN_INST" LOC = "DCM_X0Y3";
 #INST "PLL_OSERDES"   LOC = "PLL_ADV_X0Y1";
 #INST "ioclk_buf"     LOC = "BUFPLL_X1Y0";
-
-########################################
-# Reset button and LEDs // FROM HDMI, to be changed
-########################################
-#NET "RSTBTN"        LOC = "H18" | IOSTANDARD = LVCMOS33;
 
 ###########################################
 # Timing Constraints // FROM HDMI
@@ -83,6 +98,10 @@ NET "TX0_TMDSB(1)"  LOC = "C6" |IOSTANDARD = TMDS_33 ;
 NET "TX0_TMDS(0)"  	LOC = "B2" |IOSTANDARD = TMDS_33 ; # Blue
 NET "TX0_TMDSB(0)"  LOC = "A2" |IOSTANDARD = TMDS_33 ;
 
+
+# Reset button for HDMI
+
+NET "rstbtn_n" LOC = "T15" | IOSTANDARD = LVCMOS33;
 
 ########################################
 # SRAM 1
@@ -175,10 +194,10 @@ NET SRAM2_DATA[12]	LOC = P7 | IOSTANDARD = LVCMOS33;
 NET SRAM2_DATA[13]	LOC = N6 | IOSTANDARD = LVCMOS33;
 NET SRAM2_DATA[14]	LOC = T7 | IOSTANDARD = LVCMOS33;
 NET SRAM2_DATA[15]	LOC = R7 | IOSTANDARD = LVCMOS33;
-
-########################################
-# EBI
-########################################
+#
+#########################################
+## EBI
+#########################################
 NET EBI_WEN		LOC = U10 | IOSTANDARD = LVCMOS33;
 NET EBI_REN		LOC = F2 | IOSTANDARD = LVCMOS33;
 NET EBI_CS0		LOC = F1 | IOSTANDARD = LVCMOS33;
@@ -223,4 +242,4 @@ NET EBI_DATA[12]	LOC = K1 | IOSTANDARD = LVCMOS33;
 NET EBI_DATA[13]	LOC = K2 | IOSTANDARD = LVCMOS33;
 NET EBI_DATA[14]	LOC = L1 | IOSTANDARD = LVCMOS33;
 NET EBI_DATA[15]	LOC = L2 | IOSTANDARD = LVCMOS33;
-
+#
