--- a/camvolution.ucf
+++ b/camvolution.ucf
@@ -17,6 +17,9 @@ Net clk120 TNM_NET = clk120;
 TIMESPEC TS_clk120 = PERIOD clk120 120000.0 kHz;
 NET "clk120"       LOC = "C9" | IOSTANDARD = LVCMOS33 | PERIOD = 120 MHz;
 
+
+#INST "pixelclock_BUFIO2" LOC = BUFIO2_X2Y29;
+#INST "pixel_clk_BUFG" LOC = BUFGMUX_X2Y2;
 # Constraint for RX0
 #
 NET "hdmi/dvi_rx0/rxclk" TNM_NET = DVI_CLOCK0;
@@ -106,94 +109,94 @@ NET "rstbtn_n" LOC = "T15" | IOSTANDARD = LVCMOS33;
 ########################################
 # SRAM 1
 ########################################
-NET SRAM1_CE	LOC = V8 | IOSTANDARD = LVCMOS33;
-NET SRAM1_LB	LOC = M8 | IOSTANDARD = LVCMOS33;
-NET SRAM1_UB	LOC = N8 | IOSTANDARD = LVCMOS33;
-NET SRAM1_OE	LOC = U8 | IOSTANDARD = LVCMOS33;
-NET SRAM1_WE	LOC = U7 | IOSTANDARD = LVCMOS33;
-
-NET SRAM1_ADDRESS[0]	LOC = H15 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[1]	LOC = H14 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[2]	LOC = H13 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[3]	LOC = F18 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[4]	LOC = F17 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[5]	LOC = K13 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[6]	LOC = K12 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[7]	LOC = E18 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[8]	LOC = E16 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[9]	LOC = G13 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[10]	LOC = H12 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[11]	LOC = D18 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[12]	LOC = D17 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[13]	LOC = G14 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[14]	LOC = F14 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[15]	LOC = C18 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[16]	LOC = C17 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[17]	LOC = F16 | IOSTANDARD = LVCMOS33;
-NET SRAM1_ADDRESS[18]	LOC = F15 | IOSTANDARD = LVCMOS33;
-
-NET SRAM1_DATA[0]	LOC = K17 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[1]	LOC = J18 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[2]	LOC = J16 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[3]	LOC = H18 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[4]	LOC = H17 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[5]	LOC = L16 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[6]	LOC = L15 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[7]	LOC = K16 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[8]	LOC = K15 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[9]	LOC = L13 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[10]	LOC = L12 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[11]	LOC = K14 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[12]	LOC = J13 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[13]	LOC = G18 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[14]	LOC = G16 | IOSTANDARD = LVCMOS33;
-NET SRAM1_DATA[15]	LOC = H16 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_CE	LOC = V8 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_LB	LOC = M8 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_UB	LOC = N8 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_OE	LOC = U8 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_WE	LOC = U7 | IOSTANDARD = LVCMOS33;
+#
+#NET SRAM1_ADDRESS[0]	LOC = H15 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[1]	LOC = H14 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[2]	LOC = H13 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[3]	LOC = F18 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[4]	LOC = F17 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[5]	LOC = K13 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[6]	LOC = K12 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[7]	LOC = E18 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[8]	LOC = E16 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[9]	LOC = G13 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[10]	LOC = H12 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[11]	LOC = D18 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[12]	LOC = D17 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[13]	LOC = G14 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[14]	LOC = F14 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[15]	LOC = C18 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[16]	LOC = C17 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[17]	LOC = F16 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_ADDRESS[18]	LOC = F15 | IOSTANDARD = LVCMOS33;
+#
+#NET SRAM1_DATA[0]	LOC = K17 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[1]	LOC = J18 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[2]	LOC = J16 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[3]	LOC = H18 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[4]	LOC = H17 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[5]	LOC = L16 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[6]	LOC = L15 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[7]	LOC = K16 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[8]	LOC = K15 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[9]	LOC = L13 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[10]	LOC = L12 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[11]	LOC = K14 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[12]	LOC = J13 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[13]	LOC = G18 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[14]	LOC = G16 | IOSTANDARD = LVCMOS33;
+#NET SRAM1_DATA[15]	LOC = H16 | IOSTANDARD = LVCMOS33;
 
 ########################################
 # SRAM 2
 ########################################
-NET SRAM2_CE	LOC = T6 | IOSTANDARD = LVCMOS33;
-NET SRAM2_LB	LOC = V7 | IOSTANDARD = LVCMOS33;
-NET SRAM2_UB	LOC = N7 | IOSTANDARD = LVCMOS33;
-NET SRAM2_OE	LOC = P8 | IOSTANDARD = LVCMOS33;
-NET SRAM2_WE	LOC = V6 | IOSTANDARD = LVCMOS33;
-
-NET SRAM2_ADDRESS[0]	LOC = M13 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[1]	LOC = L14 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[2]	LOC = N14 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[3]	LOC = M14 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[4]	LOC = U18 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[5]	LOC = U17 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[6]	LOC = T18 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[7]	LOC = T17 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[8]	LOC = N16 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[9]	LOC = N15 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[10]	LOC = P18 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[11]	LOC = P17 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[12]	LOC = N18 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[13]	LOC = N17 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[14]	LOC = M18 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[15]	LOC = M16 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[16]	LOC = L18 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[17]	LOC = L17 | IOSTANDARD = LVCMOS33;
-NET SRAM2_ADDRESS[18]	LOC = K18 | IOSTANDARD = LVCMOS33;
-
-NET SRAM2_DATA[0]	LOC = V3 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[1]	LOC = U3 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[2]	LOC = P6 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[3]	LOC = N5 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[4]	LOC = V4 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[5]	LOC = T4 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[6]	LOC = T3 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[7]	LOC = R3 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[8]	LOC = V5 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[9]	LOC = U5 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[10]	LOC = T5 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[11]	LOC = R5 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[12]	LOC = P7 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[13]	LOC = N6 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[14]	LOC = T7 | IOSTANDARD = LVCMOS33;
-NET SRAM2_DATA[15]	LOC = R7 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_CE	LOC = T6 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_LB	LOC = V7 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_UB	LOC = N7 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_OE	LOC = P8 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_WE	LOC = V6 | IOSTANDARD = LVCMOS33;
+#
+#NET SRAM2_ADDRESS[0]	LOC = M13 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[1]	LOC = L14 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[2]	LOC = N14 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[3]	LOC = M14 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[4]	LOC = U18 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[5]	LOC = U17 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[6]	LOC = T18 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[7]	LOC = T17 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[8]	LOC = N16 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[9]	LOC = N15 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[10]	LOC = P18 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[11]	LOC = P17 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[12]	LOC = N18 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[13]	LOC = N17 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[14]	LOC = M18 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[15]	LOC = M16 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[16]	LOC = L18 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[17]	LOC = L17 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_ADDRESS[18]	LOC = K18 | IOSTANDARD = LVCMOS33;
+#
+#NET SRAM2_DATA[0]	LOC = V3 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[1]	LOC = U3 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[2]	LOC = P6 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[3]	LOC = N5 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[4]	LOC = V4 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[5]	LOC = T4 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[6]	LOC = T3 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[7]	LOC = R3 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[8]	LOC = V5 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[9]	LOC = U5 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[10]	LOC = T5 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[11]	LOC = R5 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[12]	LOC = P7 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[13]	LOC = N6 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[14]	LOC = T7 | IOSTANDARD = LVCMOS33;
+#NET SRAM2_DATA[15]	LOC = R7 | IOSTANDARD = LVCMOS33;
 #
 #########################################
 ## EBI
