Fix HDMI channel mixup

--- a/camvolution.ucf
+++ b/camvolution.ucf
@@ -84,22 +84,22 @@ TIMESPEC "TS_ramra_0" = FROM "bramra_0"  TO "fddbgrp_0" TS_DVI_CLOCK0;
 
 NET "RX0_TMDS(3)"  	LOC = "B9" |IOSTANDARD = TMDS_33 ; # CLK
 NET "RX0_TMDSB(3)"  LOC = "A9" |IOSTANDARD = TMDS_33 ;
-NET "RX0_TMDS(2)"  	LOC = "C10" |IOSTANDARD = TMDS_33 ; # Red
-NET "RX0_TMDSB(2)"  LOC = "A10" |IOSTANDARD = TMDS_33 ;
+NET "RX0_TMDS(0)"  	LOC = "C10" |IOSTANDARD = TMDS_33 ; # Blue
+NET "RX0_TMDSB(0)"  LOC = "A10" |IOSTANDARD = TMDS_33 ;
 NET "RX0_TMDS(1)"  	LOC = "D11" |IOSTANDARD = TMDS_33 ; # Green	
 NET "RX0_TMDSB(1)"  LOC = "C11" |IOSTANDARD = TMDS_33 ;
-NET "RX0_TMDS(0)"  	LOC = "G9"  |IOSTANDARD = TMDS_33 ; # Blue	
-NET "RX0_TMDSB(0)"  LOC = "F9"  |IOSTANDARD = TMDS_33 ;
+NET "RX0_TMDS(2)"  	LOC = "G9"  |IOSTANDARD = TMDS_33 ; # Red	
+NET "RX0_TMDSB(2)"  LOC = "F9"  |IOSTANDARD = TMDS_33 ;
 
 # HDMI output
 NET "TX0_TMDS(3)"  	LOC = "B4" |IOSTANDARD = TMDS_33 ; # Clock	
 NET "TX0_TMDSB(3)"  LOC = "A4" |IOSTANDARD = TMDS_33 ;
-NET "TX0_TMDS(2)"  	LOC = "B3" |IOSTANDARD = TMDS_33 ; # Red 	
-NET "TX0_TMDSB(2)"  LOC = "A3" |IOSTANDARD = TMDS_33 ;
+NET "TX0_TMDS(0)"  	LOC = "B3" |IOSTANDARD = TMDS_33 ; # Blue 	
+NET "TX0_TMDSB(0)"  LOC = "A3" |IOSTANDARD = TMDS_33 ;
 NET "TX0_TMDS(1)"  	LOC = "D6" |IOSTANDARD = TMDS_33 ; # Green	
 NET "TX0_TMDSB(1)"  LOC = "C6" |IOSTANDARD = TMDS_33 ;
-NET "TX0_TMDS(0)"  	LOC = "B2" |IOSTANDARD = TMDS_33 ; # Blue
-NET "TX0_TMDSB(0)"  LOC = "A2" |IOSTANDARD = TMDS_33 ;
+NET "TX0_TMDS(2)"  	LOC = "B2" |IOSTANDARD = TMDS_33 ; # Red
+NET "TX0_TMDSB(2)"  LOC = "A2" |IOSTANDARD = TMDS_33 ;
 
 
 # Reset button for HDMI
